yml file updated

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/venokkjs/subdomains/api.venos.store
+    - export DEPLOYPATH=/home/venokkjs/subdomains/api.venos.store/
     - /bin/cp * $DEPLOYPATH
